--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 
   "repository": {
     "type": "git",
-    "url": "git://github.com/n4kz/react-native-material-dropdown.git"
+    "url": "git://github.com/GoldenBlue-Dev/react-native-material-dropdown.git"
   },
 
   "peerDependencies": {
@@ -41,8 +41,8 @@
 
   "dependencies": {
     "prop-types": "^15.5.9",
-    "react-native-material-buttons": "^0.5.0",
-    "react-native-material-ripple": "^0.8.0",
-    "react-native-material-textfield": "^0.12.0"
+    "react-native-material-buttons": "https://github.com/GoldenBlue-Dev/react-native-material-buttons.git",
+    "react-native-material-ripple": "https://github.com/GoldenBlue-Dev/react-native-material-ripple.git",
+    "react-native-material-textfield": "https://github.com/GoldenBlue-Dev/react-native-material-textfield.git"
   }
 }
