--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
 
   "dependencies": {
     "prop-types": "^15.5.9",
-    "react-native-material-buttons": "https://github.com/GoldenBlue-Dev/react-native-material-buttons.git",
-    "react-native-material-ripple": "https://github.com/GoldenBlue-Dev/react-native-material-ripple.git",
-    "react-native-material-textfield": "https://github.com/GoldenBlue-Dev/react-native-material-textfield.git"
+    "react-native-material-buttons": "git://github.com/GoldenBlue-Dev/react-native-material-buttons.git",
+    "react-native-material-ripple": "git://github.com/GoldenBlue-Dev/react-native-material-ripple.git",
+    "react-native-material-textfield": "git://github.com/GoldenBlue-Dev/react-native-material-textfield.git"
   }
 }
